# OmniCloudMask

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MODEL_CHANGELOG.md  Maxar example.ipynb  README.md  Run OCM Maxar example.ipynb  Run OCM.ipynb  Test.ipynb  download_all_models.py  pyproject.toml  python_package_publishing.md  setup.py  test OCM.ipynb
benchmarking/: README.md  benchmarking.ipynb  generate_docs_table.py
benchmarking/results/: apple_m2_mps_20260327.json  apple_m2_mps_20260328.json  apple_m4_pro_mps_20260325.json  apple_m4_pro_mps_20260327.json  apple_m4_pro_mps_20260328.json  nvidia_geforce_rtx_3090_20260328.json  nvidia_geforce_rtx_4090_20260325.json  nvidia_geforce_rtx_4090_20260327.json
docker/: Dockerfile  README.md
docs/: .gitignore  api.md  benchmarks.md  conf.py  contributing.md  generate_example_image.py  how-it-works.md  index.md  installation.md  quickstart.md  requirements.txt  troubleshooting.md  usage.md  users.md
examples/: HLS.ipynb  Maxar.ipynb  PlanetScope Hyperspectral.ipynb  PlanetScope.ipynb  hls.ipynb  maxar.ipynb  planetscope.ipynb  planetscope_hyperspectral.ipynb  sentinel2_planetary_computer.ipynb  sentinel2_safe.ipynb
omnicloudmask/: __init__.py  cloud_mask.py  data_loaders.py  download_models.py  dynamic_unet.py  model_download_links.csv  model_utils.py  mps_patch.py  optimizations.py  raster_utils.py  setup.py
omnicloudmask/models/: PM_model_2.2.10_RG_NIR_509_convnextv2_nano.fcmae_ft_in1k_PT_state.pth  PM_model_2.2.10_RG_NIR_509_regnety_004.pycls_in1k_PT_state.pth  model_download_links.csv
tests/: S2A_MSIL2A_20170725T142751_N9999_R053_T19GBQ_20240410T040247_expected_output.tif  Test.ipynb  Visual tests.ipynb  conftest.py  setup_test_data.py  test_cloud_mask.py  test_coverage_commands.md  test_data_loaders.py  test_download_models.py  test_model_utils.py  test_mps_patch.py  test_optimizations.py  test_raster_utils.py
tests/speed test/: Downlaod scenes.ipynb  OCM inference version comparison.ipynb  OCM inference.ipynb
training/: Download CloudSEN12.ipynb  Train OCM models.ipynb  augs.py  helpers.py  utils.py
training/Get datasets/: 1 Download CloudSEN12.ipynb  2 Download kappaset.ipynb  3 Download CloudSEN12 Planitary computer.ipynb  4 Make CloudSEN12 super res.ipynb  5 Download OCM Hard negatives.ipynb  OCM hard negative dataset metadata.csv
validation dataset/: Download validation data.ipynb
validation dataset/Landsat/: Download PixBox Landsat 8.ipynb  Get stats.ipynb  OCM inference.ipynb
validation dataset/PlanetScope/: Download PlanetScope.ipynb  Get stats.ipynb  OCM inference.ipynb  PlanetScope_validation.gpkg
validation dataset/Sentinel-2/: Download PixBox Sentinel-2.ipynb  Get stats.ipynb  OCM inference.ipynb
validation dataset/Throughput/: OCM inference.ipynb
