[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicloudmask"
authors = [{name = "Nick Wright", email = "nicholas.wright@dpird.wa.gov.au"}]
dynamic = ["version"]
description = "Python library for cloud and cloud shadow segmentation in high to moderate resolution satellite imagery"
requires-python = ">=3.9"
dependencies = [
    "fastai>=2.7",
    "gdown>=5.1.0",
    "huggingface-hub>=0.28.1",
    "platformdirs>=4.0.0",
    "rasterio>=1.3",
    "safetensors>=0.3.0",
    "timm>=0.9",
    "torch>=2.3.0",
    "tqdm>=4.0",
]
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["sentinel-2", "landsat", "maxar", "planetscope", "satellite", "cloud", "remote-sensing", "mask", "shadow"]

[tool.setuptools.dynamic]
version = {attr = "omnicloudmask.__version__.__version__"}

[dependency-groups]
dev = [
    "cubo>=2024.1.1",
    "geopandas>=1.0.1",
    "h5py>=3.14.0",
    "jupyter>=1.1.1",
    "netcdf4>=1.7.2",
    "opencv-python>=4.12.0.88",
    "planetary-computer>=1.0.0",
    "pystac>=1.10.1",
    "pystac-client>=0.8.3",
    "pytest>=8.4.0",
    "rioxarray>=0.15.0",
    "ruff>=0.12.2",
    "s2dl>=0.3",
    "spandrel>=0.4.1",
    "tacoreader>=0.5.6",
]

[project.urls]
Homepage = "https://github.com/DPIRD-DMA/OmniCloudMask"

[tool.setuptools.package-data]
omnicloudmask = ["model_download_links.csv"]

[tool.setuptools]
packages = ["omnicloudmask"]

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.ruff]
exclude = ["training/Train OCM models.ipynb"]
